# asyncio-anywhere

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  pytest.yml
asyncio_anywhere/: __init__.py  core.py
tests/: test_core.py  test_curio.py  test_trio.py
